2010-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Andr'e:
	bug #30783 Missing prototype in power.h
	* include/avr/power.h: Add prototype for clock_prescale_set()
	for the second block (prescaler reachable by IN/OUT
	instructions).

2010-06-24  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/Makefile.am (avr_HEADERS): Add iom3000.h.

2010-06-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version to 1.7.1, after releasing.

2010-06-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Released avr-libc-1.7.0.

2010-06-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date in preparation for releasing
	avr-libc 1.7.0.

2010-06-15  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix bug #30148.
	* include/avr/iox128a1.h: Rename HIRES.CTRL to HIRES.CTRLA.
	* NEWS: Add to fixed bug list.

2010-06-15  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Change ATxemga32A4 from avrxmega3 to avrxmega2.
	* devtools/gen-avr-lib-tree.sh: Same.
	* doc/api/using-tools.dox: Same.

2010-06-14  Eric B. Weddington  <eric.weddington@atmel.com>

	* LICENSE: Update copyright year.

2010-06-14  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/pgmspace.h: Remove new features regarding new segments.
	Feature not yet ready. Correct comment.

2010-06-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/pgmspace.h: Remove the #error for architectures that
	don't support segmented progmem access.

2010-06-12  Eric B. Weddington  <eric.weddington@atmel.com>

	Special thanks to Carlos Lamas and Jan Waclawek for contributing
	code in patch #6352 (that should've gotten in a long time ago).
	* libc/pmstring/Files.am: Add new files to list.
	* libc/pmstring/memcmp_PF.S: New file.
	* libc/pmstring/memcpy_PF.S: Same.
	* libc/pmstring/strcasecmp_PF.S: Same.
	* libc/pmstring/strcat_PF.S: Same.
	* libc/pmstring/strcmp_PF.S: Same.
	* libc/pmstring/strcpy_PF.S: Same.
	* libc/pmstring/strlcat_PF.S: Same.